--- a/estilos.css
+++ b/estilos.css
@@ -120,7 +120,7 @@ p {
     background-color: black;
     color: white;
     bottom: 0;
-    padding: 40px;
+    padding: 20px;
     font-size: 14px;
     position: fixed;
     text-align: center;
@@ -192,5 +192,152 @@ p {
   .footer {
     padding: 15px;
     font-size: 10px;
+  }
+}
+
+.proyectos {
+  text-align: center;
+  padding: 20px;
+}
+
+.github-link-container {
+  display: inline-block;
+  margin: 0 auto;
+}
+
+.github-link {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-decoration: none;
+  border: 3px solid transparent;
+  padding: 10px;
+  border-radius: 15px;
+  transition: all 0.3s ease;
+}
+
+.github-link img {
+  max-width: 100%;
+  height: auto;
+  transition: transform 0.3s ease;
+}
+
+.github-link span {
+  margin-top: 10px;
+  font-size: 1.5em;
+  color: black;
+  font-weight: bold;
+}
+
+.github-link-container {
+  text-align: center;
+  margin-top: 20px;
+}
+
+
+
+.github-link:hover {
+  border-color: #000;
+  background-color: #f5f5f5;
+}
+
+.github-link:hover img {
+  transform: scale(1.1);
+}
+
+@media (max-width: 768px) {
+  .github-link {
+      border-color: #ccc;
+      padding: 8px;
+      border-radius: 10px;
+  }
+
+  .github-link img {
+      width: 10px;
+      height: 10px;
+  }
+
+  .github-link span {
+      font-size: 1.2em;
+  }
+}
+
+@media (min-width: 769px) {
+  .github-link {
+      border-color: #000;
+      padding: 10px;
+      border-radius: 10px;
+  }
+
+  .github-link img {
+      width: 150px;
+      height: 150px;
+  }
+
+  .github-link span {
+      font-size: 2em;
+  }
+}
+
+.github-link {
+  display: inline-flex;
+  align-items: center;
+  padding: 10px;
+  border-radius: 8px;
+  text-decoration: none;
+  color: #ffffff; /* Color inicial del texto */
+  font-weight: bold;
+  font-size: 18px;
+  position: relative;
+  overflow: hidden;
+}
+
+.github-link img {
+  width: 100%;
+  max-width: 50px;
+  height: auto;
+}
+
+.github-link span {
+  margin-left: 10px;
+}
+
+.github-link::before {
+  content: "";
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  right: -2px;
+  bottom: -2px;
+  background: linear-gradient(45deg, red, green, blue, red);
+  background-size: 400%;
+  border-radius: 10px;
+  z-index: -1;
+  animation: borderAnimation 3s linear infinite;
+}
+
+@keyframes borderAnimation {
+  0% {
+      background-position: 0%;
+  }
+  100% {
+      background-position: 400%;
+  }
+}
+
+.github-link span {
+  animation: textAnimation 3s linear infinite;
+  background: linear-gradient(45deg, red, green, blue, red);
+  background-size: 400%;
+  -webkit-background-clip: text;
+  color: transparent;
+}
+
+@keyframes textAnimation {
+  0% {
+      background-position: 0%;
+  }
+  100% {
+      background-position: 400%;
   }
 }
