--- a/estilos.css
+++ b/estilos.css
@@ -285,7 +285,7 @@ p {
   padding: 10px;
   border-radius: 8px;
   text-decoration: none;
-  color: #ffffff; /* Color inicial del texto */
+  color: #ffffff; 
   font-weight: bold;
   font-size: 18px;
   position: relative;
